# dstack

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  STORY.md  index.html  robots.txt  sitemap.xml  style.css
.claude-plugin/: marketplace.json
crates/dstack-cli/: Cargo.toml  README.md
crates/dstack-cli/src/: cmd_audit.rs  cmd_deploy.rs  cmd_init.rs  cmd_loop.rs  cmd_memory.rs  cmd_skills.rs  cmd_sync.rs  config.rs  lib.rs  main.rs
crates/dstack-memory/: Cargo.toml  README.md
crates/dstack-memory/src/: eruka.rs  file.rs  lib.rs
crates/dstack-server/: Cargo.toml  README.md
crates/dstack-server/src/: api.rs  main.rs
docs/plans/: 2026-04-08-dstack-v0.1-plan.md
docs/specs/: 2026-04-08-dstack-v0.1-design.md  2026-04-09-containerization-strategy.md  2026-04-09-dstack-v0.3-mcp-api.md  2026-04-12-dstack-harness-patterns.md
overlays/: example.toml
plugin/: AGENTS.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  gemini-extension.json  package.json
plugin/.claude-plugin/: plugin.json
plugin/.codex/: INSTALL.md
plugin/.cursor-plugin/: plugin.json
plugin/.opencode/: INSTALL.md
plugin/.opencode/plugins/: dstack.js
plugin/.pawan/: INSTALL.md  plugin.toml
plugin/commands/: audit.md  deploy.md  sync.md
plugin/hooks/: context-monitor  hooks.json  proprietary-guard  quality-gate  session-start
plugin/skills/companion-docs/: SKILL.md
plugin/skills/dirmacs-branch-sync/: SKILL.md
plugin/skills/eruka-memory/: SKILL.md
plugin/skills/multi-repo-ops/: SKILL.md
plugin/skills/quality-gates/: SKILL.md
plugin/skills/ralph-loop/: SKILL.md
plugin/skills/using-dstack/: SKILL.md
plugin/skills/vps-deploy/: SKILL.md
site/: config.toml  custom.css  marmite.yaml
site/content/: _index.md  index.md  story.md
site/sass/: style.scss
site/templates/: base.html  index.html  page.html
story/: index.html
