[package]
name = "dstack-cli"
version.workspace = true
edition.workspace = true
description = "Development stack for AI-assisted multi-repo work — CLI binary"
license.workspace = true
repository.workspace = true
keywords = ["cli", "developer-tools", "ai", "memory", "deployment"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[lib]
name = "dstack"
path = "src/lib.rs"

[[bin]]
name = "dstack"
path = "src/main.rs"

[dependencies]
dstack-memory = { version = "0.3.1", path = "../dstack-memory", features = ["file", "eruka"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
dirs = "6"
anyhow = "1"
serde_json = "1"
